紅利桃子 - 新增777活動頁面

--- a/iiot/peach/ticket_mall.html
+++ b/iiot/peach/ticket_mall.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>紅利桃子－商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底</title>
+    <title>放大祭攻略玩法 | 紅利桃子 777 放大祭 － 商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底</title>
     <meta name='description'content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
-    <meta name='keywords' content="數位桃園, 數位振興, 商家振興, 市民卡, 紅利桃子, 桃園市民, TTPUSH, 點數特約商店" />
+    <meta name='keywords' content="放大祭, 攻略玩法, 數位桃園, 數位振興, 商家振興, 市民卡, 紅利桃子, 桃園市民, TTPUSH, 點數特約商店" />
     <meta property="og:image" content="https://point.tycg.gov.tw/images/share-pic-0704.jpg" />
-    <meta property="og:title" content="紅利桃子－商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底" />
+    <meta property="og:title" content="放大祭攻略玩法 | 紅利桃子 777 放大祭－商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底" />
     <meta property="og:url" content="https://point.tycg.gov.tw" />
     <meta property="og:description" content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
     <meta property="og:type" content="website" />
@@ -25,6 +25,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="https://taoyuan1000.tycg.gov.tw/images/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://taoyuan1000.tycg.gov.tw/images/icons/favicon-16x16.png">
     <link rel="shortcut icon" href="https://taoyuan1000.tycg.gov.tw/images/icons/favicon.ico" />
+
     <link rel="stylesheet" href="css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -46,7 +47,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TBZCW9V" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-   <div id="cookie-accept" class="cookie-accept">
+    <div id="cookie-accept" class="cookie-accept">
         <span style="">為提供您更多優質的內容，本網站使用 cookies 分析技術。若繼續閱覽本網站內容，即表示您同意我們使用 cookies ，關於更多 cookies 以及相關政策更新資訊，請閱讀我們的<a href="privacy.html" style="color: #ffda4e;">隱私權及安全政策</a>。</span>
         <button class="agree" onclick="javascript: $('#cookie-accept').hide(); createCookie('cookieAccepted', '1', 365, '/');setAllowPrivacy();">同意</button>
         <div class="close" onclick="javascript: $('#cookie-accept').hide(); createCookie('cookieAccepted', '1', 365, '/');">✖️</div>
@@ -57,7 +58,10 @@
         <div class="pushy-content">
             <ul>
                 <li class="pushy-link">
-                    <a class="go-section-01">最新消息</a>
+                    <a href="index.html">回首頁</a>
+                </li>
+                <li class="pushy-link">
+                    <a href="index.html#goThe01">最新消息</a>
                 </li>
                 <li class="pushy-link">
                     <a href="campaign.html">最新點數活動</a>
@@ -100,193 +104,107 @@
             </a>
             <nav class="nav-menu">
                 <ul>
-                    <li class="go-section-01">
-                        <a>最新消息</a>
-                    </li>
-                    <li class="go-section-02">
-                        <a href="campaign.html#link01">最新點數活動</a>
-                    </li>
                     <li class="dropdown">
-                        <a class="title">放大祭活動</a>
+                        <a class="title">NEW!票券商城</a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="peach777.html#link01">放大祭攻略玩法</a>
+                                <a href="ticket_mall.html#link01">1拿2花3抽獎</a>
                             </li>
                             <li>
-                                <a href="ticket_mall.html#link01">NEW!票券商城</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- go-section-03 -->
-                    <li class="dropdown">
-                        <a class="title">民眾專區</a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="point.html#link01">如何加入紅利桃子</a>
+                                <a href="ticket_mall.html#link02">一點不留放大術</a>
                             </li>
                             <li>
-                                <a href="point.html#link02">紅利桃子怎麼拿?</a>
+                                <a href="ticket_mall.html#link03">點數消費抽好禮</a>
                             </li>
                             <li>
-                                <a href="point.html#link03">紅利桃子怎麼花?</a>
+                                <a href="ticket_mall.html#link04">品牌票券</a>
                             </li>
                             <li>
-                                <a href="business.html#link01">如何成為特約店家</a>
-                            </li>
-                            <li>
-                                <a href="https://lihi3.com/BYXkv" target="_blank">前往紅利桃子</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="title">業者專區</a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="business.html#link01">如何加入特約店家</a>
-                            </li>
-                            <li>
-                                <a href="https://lihi3.com/psG7v" target="_blank">申請加入特約商家</a>
+                                <a href="ticket_mall.html#link05">注意事項</a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="faq.html">常見問題</a>
+                        <a href="index.html">回首頁</a>
                     </li>
                 </ul>
             </nav>
         </header>
-        <section class="middle-container clearfix">      
+        <section class="middle-container inside-container clearfix bg-for-w">      
             <main class="main-container">
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <a href="https://lihi3.com/BYXkv" target="_blank">
-                                <img src="images/main-banner-0704.jpg" title="桃園市民卡－1點 = 1元 千萬紅利桃子加倍贈" width="100%">
-                            </a>
+                            <img src="images/banner-777.jpg" title="紅利桃子 777 放大祭" width="100%">
                         </div>
                     </div>
                 </section>
-                <section class="event-content" id="goThe01">
-                    <div class="card">
-                         <div class="main-introductio">
-                            <h3 class="sub-title">
-                                <span class="bg-pink">桃園市民卡－紅利桃子</span>
-                            </h3>
-                            <h4 class="hot-title pa-01">商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底</h4>
-                            <div class="info">
-                                <h5>活動期間</h5>
-                                <p>111年7月15日至12月18日</p>
-                                <h5>點數期限</h5>
-                                <p>111年7月15日至12月18日</p>
-                                <h5>活動簡介</h5>
-                                <p>桃園市政府深化市民數位生活，引領數位新經濟，由資訊科技局全新打造的「市民卡紅利桃子」平台，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強在地振興將於7月15日起，結合各局處活動送出千萬元台幣等值的紅利桃子點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1點=1元），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。</p>
-                                <h5>最新消息</h5>
-                                <p>「點數特約商家」招募中，加入辦法請洽業者專區<br><a href="https://forms.gle/cjEuN9TL8Wtf9iga6" target="_blank">各場次線上招商說明會報名</a></p>
-                                <div class="join-btn clearfix">
-                                    <a href="https://lihi3.com/BYXkv" target="_blank">
-                                        <img  src="images/point-join-1.png" width="100%" alt="紅利桃子 - 民眾加入按鈕">
-                                    </a>
-                                    <a href="https://lihi3.com/psG7v" target="_blank">
-                                        <img src="images/point-join-2.png" width="100%" alt="紅利桃子 - 店家加入按鈕">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <h3 class="sub-title">
-                            <span class="bg-pink">全民搶點 - 各項點數任務與活動</span>
-                        </h3>
-                        <a class="store-event a-an" href="campaign.html">
-                            <img src="images/btn_event_more.png" width="100%" alt="立即點我查看各項點數活動">
-                        </a>
-                    </div>
-                    <div class="card" id="goThe03">
-                        <h3 class="sub-title">
-                            <span class="bg-pink">全民攻略 - 紅利桃子是什麼？</span>
-                        </h3>
-                        <div class="info">
-                            <div class="how-box">
-                                <ul class="clearfix">
-                                    <li>
-                                        <a href="point.html#link01">
-                                            <img src="images/step1.png" alt="如何加入紅利桃子">
-                                            <p>（看詳細說明）</p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="point.html#link02">
-                                            <img src="images/step2.png" alt="紅利桃子怎麼拿?">
-                                            <p>（看詳細說明）</p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="point.html#link03">
-                                            <img src="images/step3.png" alt="紅利桃子怎麼花?">
-                                            <p>（看詳細說明）</p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="business.html#link01">
-                                            <img src="images/step4.png" alt="如何成為特約店家">
-                                            <p>（看詳細說明）</p>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    <div class="card">
-                        <h3 class="sub-title">
-                            <span class="bg-pink">桃園市民卡紅利桃子</span>
-                        </h3>
-                        <div class="info">
-                            <div class="video-box">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/lm76mMPyPeE" title="YouTube video player"
-                                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <h3 class="sub-title">
-                            <span class="bg-pink">紅利桃子可以去哪消費？</span>
-                        </h3>
-                        <a class="store-more a-an" href="https://lihi3.com/nYaEQ" target="_blank">
-                            <img src="images/btn_store_more.png" width="100%" alt="點我查看特約商家">
-                        </a>
-                        <p class="text-remark">※ 特約商家陸續加入中，實際折抵請依紅利桃子平台「優惠好康」顯示店家為準！</p>
+                <section class="event-content">
+                    <div class="card no-bg" id="link01">
                         <div>
-                            <img src="images/0728/shop-logos.jpg" width="100%" alt="紅利桃子可以去哪消費？">
+                            <a class="a-an" target="_blank">
+                                <img class="" src="images/777/mall-01.jpg" width="100%" alt="紅利桃子放大祭 1拿 2花 3抽獎">
+                            </a>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card no-bg" id="link02">
+                        <div style="display: inline-block ;">
+                            <a class="a-an" target="_blank">
+                                <img class="" src="images/777/mall-02.jpg" width="100%" alt="一點不留放大術">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="card no-bg" id="link03">
+                        <div>
+                            <a class="a-an" target="_blank">
+                                <img class="" src="images/777/mall-03.png" width="100%" alt="點數消費抽好禮">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="card no-bg" id="link04">
+                        <div>
+                            <img class="" src="images/777/mall-logos.jpg" width="100%" alt="品牌票券">
+                        </div>
+                    </div>
+                    <Br>
+                    <div class="card" id="link05"> 
                         <h3 class="sub-title">
                             <span class="bg-pink">注意事項</span>
                         </h3>
                         <div class="note">
                             <ul>
                                 <li>
-                                    <p>本活動點數發放及使用時間為：111年7月15日至12月18日，請務必於期間內將點數使用完畢，逾期（111年12月19日起）將無法再進行使用。</p>
+                                    <p>註冊資料無法重複填寫及任意更改，請務必確實填寫，若資料錯誤或不符以致系統無法驗證身分，將影響您的活動資格。</p>
                                 </li>
                                 <li>
-                                    <p>每組手機號碼及身分證僅能註冊「市民卡紅利桃子」一次，註冊資料無法重複填寫及任意更改，若資料錯誤或不符以致系統無法驗證身分，將影響您的活動資格。請確實填寫有效之資料，若登錄或個人資料填寫不實、錯誤、不完整、無法辨識、虛構、偽造、盜用等，視同自動放棄中獎資格。</p>
+                                    <p>本活動獎項不得要求更換或折換現金，如中獎人不同意或違反規定者，主辦單位保有取消中獎資格及參與本活動的權利，並對任何破壞本活動行為保留法律追訴權。</p>
                                 </li>
                                 <li>
-                                    <p>特約商家點數折抵事宜在不違反點數基本使用原則下（如台幣與點數比值1：1等），請依各店家公告為準。本系統開放72小時內退點機制，民眾如有退點需求請自行與商家協商處理。</p>
+                                    <p>請確實登錄有效之資料與填寫正確個人資料，若登錄或個人資料填寫不實、錯誤、不完整、無法辨識、虛構、偽造、盜用等，視同自動放棄中獎資格。</p>
                                 </li>
                                 <li>
                                     <p>本活動之網路登入或有效紀錄，均以本府電腦系統之紀錄與認定為準。本府有權檢視各行為是否涉嫌人為操作，對於蓄意偽造、詐欺或為其他不正當交易，本府保有取消中獎資格之權利，並保留法律追訴權。</p>
                                 </li>
                                 <li>
+                                    <p>授權代領獎品，請受託人攜帶本人身分證正本、委託人之授權委託書（請註明代理事宜、委託人與受託人之姓名、身分證字號與相關個人資料，並請雙方親自簽名）至兌獎地點辦理代領事宜。</p>
+                                </li>
+                                <li>
+                                    <p>依中華民國稅法規定，中獎贈品或獎金價值超過1,001元者，填發扣（免）繳憑單予中獎人，中獎人於年度報稅時必須計入個人所得合併申報。</p>
+                                </li>
+                                <li>
+                                    <p>依稅法規定，贈品價值答新台幣 20,000 元時，中華民國境內居住者得獎者需負擔 10% 贈品稅，境外居住者則為20%贈品稅。</p>
+                                </li>
+                                <li>
+                                    <p>上述活動獎贈品及紅利桃子點數，數量有限兌完為止。</p>
+                                </li>
+                                <li>
+                                    <p>獎項須於活動期間內兌換完成，如逾期不得補發、補寄等。</p>
+                                </li>
+                                <li>
+                                    <p>獎品以實物為準，顏色及款式恕不得指定。</p>
+                                </li>
+                                <li>
                                     <p>活動辦法、中獎名單及相關事宜，請依本次活動網站公告為準，本府保有修正、補充說明、暫停或終止活動之權利，如有任何變更將公布於活動網站，恕不另行通知；其他未盡事宜，悉依本府相關規定或解釋辦理。</p>
-                                </li>
-                                <li>
-                                    <p>如需洽詢「市民卡紅利桃子」系統、點數等操作問題，請將問題及相關截圖寄送至<a href="mailto:tycc.app@gmail.com">客服信箱</a>，或於上班時間（平日9:00-17:00）撥打客服專線 03-3322107 由專人為您服務。店家申請問題請洽「<a target="_blank" href="https://lin.ee/wHvq0y7">店家LINE客服</a>」（ID：@736cvdfj，限店家加入）。</p>
-                                </li>
-                                <li>
-                                    <p>經發局「你吃飯我買單」、觀旅局「桃園旅宿千元住宿金搶先用」、農業局「有機蔬菜箱」活動規則請洽各局處洽詢，本單位僅針對得獎名單進行點數發放及針對點數使用及取得問題進行回覆。</p>
                                 </li>
                             </ul>
                         </div>
@@ -324,11 +242,6 @@
                                             <img src="images/Logo-firstbank.png" alt="第一銀行">
                                         </a>
                                     </li>
-                                    <li>
-                                        <a href="https://www.fubon.com/banking/Personal/index.htm" target="_blank" style="padding-top:5px ;">
-                                            <img style="max-width:200px;" src="images/Logo-taipeifubon.png" alt="台北富邦銀行">
-                                        </a>
-                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -340,13 +253,14 @@
                     <a class="logo" href="index.html" target="_blank"></a>
                 </div>
                 <div class="r-box">
-                    <p>Copyrights Ⓒ 2022 All Rights Reserved.<span>　 |　</span><a href="privacy.html" target="_blank">隱私權及安全政策</a></p>
+                    <p>Copyrights Ⓒ 2022 All Rights Reserved.<span>　 |　</span><a href="privacy.html" target="_blank">隱私權及安全政策</a>
+                    </p>
                 </div>
             </footer>
         </section>
     </div>
     <!-- pushy JS -->
-    <script src="mobilemenu/pushy.js"></script>
+    <script src="https://www.holkee.com/scripts/libs/pushyjs/pushy.min.js"></script>
     <script>
         // 按下同意後，呼叫setAllowPrivacy
         function setAllowPrivacy() {
@@ -367,15 +281,15 @@
         }
         // 建立cookie
         function createCookie(name, value, days, path) {
-        if (days) {
-            var date = new Date();
-            date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
-            var expires = "; expires=" + date.toGMTString();
+            if (days) {
+                var date = new Date();
+                date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+                var expires = "; expires=" + date.toGMTString();
+            }
+            else var expires = "";
+            document.cookie = name + "=" + value + expires + "; path=/";
         }
-        else var expires = "";
-        document.cookie = name + "=" + value + expires + "; path=/";
-        }
-        
+
         getAllowPrivacy();
     </script>
 </body>
