--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -110,10 +110,10 @@
                         <a class="title">放大祭活動</a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="peach777.html#link01">放大祭攻略玩法</a>
+                                <a href="peach777.html">放大祭攻略玩法</a>
                             </li>
                             <li>
-                                <a href="ticket_mall.html#link01">NEW!票券商城</a>
+                                <a href="ticket_mall.html">NEW!票券商城</a>
                             </li>
                         </ul>
                     </li>
