紅利桃子APP - 會員中心 - 物流頁面調整

--- a/iiot/taoyuang1000/logistic/index.html
+++ b/iiot/taoyuang1000/logistic/index.html
@@ -21,6 +21,13 @@
 </head>
 <body>
     <main class="main-container">
+        <section class="top-banner">
+            <img src="images/banner.png" alt="活動期間送出 10 萬元 紅利桃子點點送 不止送件 還送點" width="100%">
+            <div class="top-info">
+                <p>即日起至11/30，運費單筆<span>折抵50點</span> 全球快遞<span>送50點</span><br>
+                <span class="c-red">（活動期間一人限乙次，外送距離5公里內）</span></p>
+            </div>
+        </section>
         <section class="middle-content">
             <from class="fillin-info">
                 <!-- 錯誤添加 
@@ -36,10 +43,10 @@
                         <input class="has-error" type="" name="" value="" placeholder="取件地址">
                     </div>
                     <div class="fillin-box">
-                        <input class="has-error" type="" name="" value="" placeholder="取件人姓名">
+                        <input class="" type="" name="" value="" placeholder="取件人姓名">
                     </div>
                     <div class="fillin-box">
-                        <input class="has-error" type="" name="" value="" placeholder="取件人電話">
+                        <input class="" type="" name="" value="" placeholder="取件人電話">
                     </div>
                     <p class="text-error">「地址」、「電話」、「姓名」皆為必填項目哦。</p>
                 </fieldset>
