--- a/iiot/taoyuang1000/logistic/pay.html
+++ b/iiot/taoyuang1000/logistic/pay.html
@@ -24,6 +24,14 @@
 </head>
 <body>
     <main class="main-container">
+        <section class="top-banner">
+            <img src="images/banner.png" alt="" width="100%">
+        </section>
+        <section class="top-info">
+            <p>即日起至11/30，運費單筆<span>折抵50點</span> 全球快遞<span>送50點</span><br>
+                <span class="c-red">（活動期間一人限乙次，外送距離5公里內）</span>
+            </p>
+        </section>
         <section class="middle-content">
             <from class="fillin-info">
                 <fieldset class="pay-h">
