紅利桃子APP - 調整活動內容

--- a/iiot/peach/peach777.html
+++ b/iiot/peach/peach777.html
@@ -138,37 +138,23 @@
                 </section>
                 <section class="event-content">
                     <div class="card no-bg" id="link01">
-                        <div>
-                            <a class="a-an" target="_blank">
-                                <img class="" src="images/777/img-info-01.jpg" width="100%" alt="7大活動 7大好禮 7大功能">
-                            </a>
-                        </div>
+                        <img class="" src="images/777/img-info-01.jpg" width="100%" alt="7大活動 7大好禮 7大功能">
                     </div>
                     <div class="card no-bg">
                         <div style="display: inline-block ;">
-                            <a class="a-an" target="_blank" style="max-width: 750px;">
+                            <a class="a-an" href="https://point.tycg.gov.tw/ticket_mall.html" style="max-width: 750px;">
                                 <img class="" src="images/777/btn-123.png" width="100%" alt="放大祭攻略 1拿 2花 3抽獎">
                             </a>
                         </div>
                     </div>
                     <div class="card no-bg" id="link02">
-                        <div>
-                            <a class="a-an" target="_blank">
-                                <img class="" src="images/777/game.png" width="100%" alt="頂尖桃粉爭霸賽 實體活動拿點花點">
-                            </a>
-                        </div>
+                        <img class="" src="images/777/game.png" width="100%" alt="頂尖桃粉爭霸賽 實體活動拿點花點">
                     </div>
                     <div class="card no-bg" id="link03">
-                        <div>
-                            <a class="a-an" target="_blank">
-                                <img class="" src="images/777/shop.jpg" width="100%" alt="新招花點 線上票券商城">
-                            </a>
-                        </div>
+                        <img class="" src="images/777/shop.jpg" width="100%" alt="新招花點 線上票券商城">
                     </div>
                     <div class="card no-bg" id="link04">
-                        <div>
-                            <img class="" src="images/777/logos.png" width="100%" alt="品牌票券">
-                        </div>
+                        <img class="" src="images/777/logos.png" width="100%" alt="品牌票券">
                     </div>
                     <Br>
                     <div class="card">
