紅利桃子APP - 更新圖片上的錯別字777與LOGOs

--- a/iiot/peach/ticket_mall.html
+++ b/iiot/peach/ticket_mall.html
@@ -141,7 +141,7 @@
                 </section>
                 <section class="event-content">
                     <div class="card no-bg" id="link01">
-                        <img class="" src="images/777/mall-01.jpg" width="100%" alt="紅利桃子放大祭 1拿 2花 3抽獎">
+                        <img class="" src="images/777/mall-01-1031.png" width="100%" alt="紅利桃子放大祭 1拿 2花 3抽獎">
                     </div>
                     <div class="card no-bg" id="link02">
                         <img class="" src="images/777/mall-02.jpg" width="100%" alt="一點不留放大術">
@@ -150,7 +150,7 @@
                          <img class="" src="images/777/mall-03.png" width="100%" alt="點數消費抽好禮">
                     </div>
                     <div class="card no-bg" id="link04">
-                        <img class="" src="images/777/mall-logos.jpg" width="100%" alt="品牌票券">
+                        <img class="" src="images/777/logos.png" width="100%" alt="品牌票券">
                     </div>
                     <Br>
                     <div class="card" id="link05"> 
