紅利桃子 777 放大祭 - 新增按鈕banner

--- a/iiot/peach/peach777.html
+++ b/iiot/peach/peach777.html
@@ -141,9 +141,12 @@
                         <img class="" src="images/777/img-info-01.jpg" width="100%" alt="7大活動 7大好禮 7大功能">
                     </div>
                     <div class="card no-bg">
-                        <div style="display: inline-block ;">
-                            <a class="a-an" href="https://point.tycg.gov.tw/ticket_mall.html" style="max-width: 750px;">
-                                <img class="" src="images/777/btn-123.png" width="100%" alt="放大祭攻略 1拿 2花 3抽獎">
+                        <div class="both clearfix">
+                            <a class="a-an" href="https://point.tycg.gov.tw/ticket_mall.html">
+                                <img class="" src="images/777/btn-123-1104.png" width="100%" alt="放大祭攻略 1拿 2花 3抽獎">
+                            </a>
+                            <a class="a-an" href="https://lihi3.com/BYXkv">
+                                <img class="" src="images/777/btn-peach.png" width="100%" alt="加入紅利桃子 立即領點 花點">
                             </a>
                         </div>
                     </div>
