紅利桃子 777 放大祭 - 新增點點送 banner

--- a/iiot/peach/campaign.html
+++ b/iiot/peach/campaign.html
@@ -146,6 +146,9 @@
                                 <img class="pc-show" src="images/img-event-hot.jpg" width="100%" alt="紅利桃子 - 加碼活動">
                                 <img class="mob-show" src="images/img-event-hot-mob.jpg" width="100%" alt="紅利桃子 - 加碼活動">
                             </a>
+                            <a class="a-an" href="https://open.tycard.app/mkt/events/logistic/quotation" target="_blank" style="padding:20px 15px 15px 15px;">
+                                <img src="images/img-event-point.png" width="100%" alt="紅利桃子 - 點點送">
+                            </a>
                         </div>
                     </div>
                     <div class="card" id="link04">
