紅利桃子 - 更新banner 為777放大祭的

--- a/iiot/peach/campaign.html
+++ b/iiot/peach/campaign.html
@@ -132,7 +132,7 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <img src="images/main-banner-0704.jpg" title="桃園市民卡－1點 = 1元 千萬紅利桃子加倍贈" width="100%">
+                            <img src="images/banner-777-new.jpg" title="紅利桃子777 放大祭" width="100%">
                         </div>
                     </div>
                 </section>
