--- a/iiot/peach/ticket_mall.html
+++ b/iiot/peach/ticket_mall.html
@@ -135,7 +135,7 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <img src="images/banner-777.jpg" title="紅利桃子 777 放大祭" width="100%">
+                            <img src="images/banner-777-new.jpg" title="紅利桃子777 放大祭" width="100%">
                         </div>
                     </div>
                 </section>
