--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -160,8 +160,8 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <a href="https://lihi3.com/BYXkv" target="_blank">
-                                <img src="images/main-banner-0704.jpg" title="桃園市民卡－1點 = 1元 千萬紅利桃子加倍贈" width="100%">
+                            <a href="https://portal.typoint.tw/articles/64" target="_blank">
+                                <img src="images/banner-777-new.jpg" title="紅利桃子777 放大祭" width="100%">
                             </a>
                         </div>
                     </div>
