--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -152,6 +152,9 @@
                     <li>
                         <a href="faq.html">常見問題</a>
                     </li>
+                    <li>
+                        <a href="https://lihi3.com/OrJBz" target="_blank">前往紅利桃子</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -160,7 +163,7 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <a href="https://portal.typoint.tw/articles/64" target="_blank">
+                            <a href="peach777.html">
                                 <img src="images/banner-777-new.jpg" title="紅利桃子777 放大祭" width="100%">
                             </a>
                         </div>
@@ -190,6 +193,10 @@
                                         <img src="images/point-join-2.png" width="100%" alt="紅利桃子 - 店家加入按鈕">
                                     </a>
                                 </div>
+                                <h5>紅利桃子 777 放大季 </h5>
+                                <a class="a-an" href="peach777.html" style="padding: 10px 0;">
+                                    <img src="images/777/img-info-01.jpg" width="100%" alt="777 活動">
+                                </a>
                             </div>
                         </div>
                     </div>
