--- a/iiot/peach/point.html
+++ b/iiot/peach/point.html
@@ -203,6 +203,15 @@
                         <div style="padding-top:10px;">
                             <img src="images/0629/img-join-05.jpg" width="100%" alt="紅利桃子怎麼花？ - 點數特約店家消費">
                         </div>
+                        <div>
+                            <a class="a-an" href="https://lihi3.com/k7392" target="_blank">
+                                <img src="images/777/how.png" width="100%" alt="新招花點！線上票券商城 - 如何使用點數購買優惠票券">
+                                <p class="f-center">（點擊圖片前往票券商城）</p>
+                            </a>
+                        </div>
+                        <div style="padding-top:20px;">
+                            <img class="" src="images/777/logos.png" width="100%" alt="品牌票券">
+                        </div>
                     </div>
                     <div class="card">
                         <h3 class="sub-title">
